fixing text spacing #61657992

--- a/app/assets/stylesheets/catarse_bootstrap/pages/channels/profiles/new.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/pages/channels/profiles/new.sass
@@ -26,10 +26,10 @@
 
 .curator-name
   margin: 0 0 .2em
-  font-size: 1.2em
+  font-size: 1.1em
 
 .curator-bio
-  margin: 0 0 1em
+  margin: 0.6em 0 0.7em
   color: $blue-two
   font-weight: normal
   font-size: .8em
